# gerardolang

./: CHANGELOG.md  LICENSE  gerardolang.cabal  plan  plan.md
app/: Main.hs
lib/: Interpreter.hs  Parser.hs
test/: InterpreterSpec.hs  ParserSpec.hs
