cabal-version:      3.4
name:               gerardolang
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Cinnamond
maintainer:         john@cinnamond.me.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common base
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
    build-depends:    base ^>=4.17.0.0
                    , relude ^>= 1.2.0.0
    ghc-options:      -Wall -Werror
    default-language: GHC2021
    default-extensions: OverloadedStrings

library
    import:          base
    build-depends:   megaparsec
    hs-source-dirs:  lib
    exposed-modules: Parser

executable gl
    import:           base
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    gerardolang
    hs-source-dirs:   app

test-suite gl-test
    import:             base
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover == 2.*
    other-modules:      ParserSpec
    build-depends:      hspec == 2.*
                      , hspec-megaparsec
                      , gerardolang